# open-student-solution

./: Cargo.toml  Readme.md  settings.toml
src/: main.rs
