[package]
name = "open-student-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.24.0"
walkdir = "2.3.2"
fs_extra = "1.2.0"
inquire = "0.2.1"
open = "3.0.1"
arboard = "2.1.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] } 